--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,11 @@
 @20090612
 Percy.Peng@qisda.com
+Description:
+Use database to store the search history.And get the city list to set as the 
+Autocomplete adapter.
+
+@20090612
+Percy.Peng@qisda.com
 description:
 1.When search a city,but can't find it.Then you press on one day icon,the application will occur error because 
 it will get the data from the null pointer.So I change to that when can't find the data,don't pass the null value to the pointer.
